# codeforge

./: README.md  docker-compose.yml  pyproject.toml
src/codeforge/: __init__.py  config.py  debate.py  main.py  router.py  state.py  tools.py
tests/: test_debate.py  test_main.py  test_tools.py
